syntax = "proto3";

package chronist.records;

enum FetchStatus {
	UNKNOWN     = 0;
    FAIL        = 1;
	IN_PROGRESS = 2;
	SUCCESS     = 3;
}

message File {
  string file_id = 1;
  string file_url = 2;
}

message Source {
  string sender_id = 1;
  string channel_id = 2;
  string message_id = 3;
}

message Record {
  string record_id = 1;
  Source source = 2;
  string text_content = 3;
  int64 time = 4;
  repeated File files = 5;
  repeated string links = 6;
}
